<resources>
    <string name="app_name">CitiApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="please_wait">Please wait</string>
    <string name="powered">Citi powered by AnyPresence</string>
    <string name="consumer">Consumer Retail Banking API</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_client_id">anypresence</string>
    <string name="login_button">Login</string>
    <string name="username_password_empty">Username or Password can not be empty</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="title_activity_citi_main">CitiMainActivity</string>

    <string name="balances">Balances</string>
    <string name="transactions">Transactions</string>

    <!--Transaction List-->
    <string name="transaction_id">Transaction ID: %1$s</string>
    <string name="amount">Amount: %1$s</string>
    <string name="pending_date">Pending Date: %1$s</string>
    <string name="transaction_type">Transaction Type: %1$s</string>
    <string name="transaction_description">Description: %1$s</string>
    <string name="activity">Activity: %1$s</string>
    <string name="account_id">Account ID:</string>
    <string name="account_description">Account Description:</string>
    <string name="account_number">Account Number:</string>
    <string name="balance_type">Type:</string>
    <string name="balance_value">Value: </string>
    <string name="payee_id">Payee:</string>

    <string name="txf_customer_id">Customer ID:</string>
    <string name="txf_source_acc_id">Source Acct ID:</string>
    <string name="txf_amount">Amount:</string>
    <string name="txf_transaction_date">Transaction Date:</string>
    <string name="txf_payment_type">Payment Type:</string>
    <string name="txf_currency">Currency:</string>
    <string name="txf_dest_acc_id">Destination Acct ID:</string>
    <string name="txf_memo">Memo:</string>
    <string name="txf_payee_description">Payee Description:</string>
    <string name="txf_payee_id">Payee ID:</string>
    <string name="txf_payee_type">Payee Type:</string>
    <string name="txf_submit">Submit</string>

    <string name="payment_method">Payment Method:</string>
    <string name="bank_name">Bank Name Ext:</string>
    <string name="last_payment_amount">Last Payment Amount:</string>
    <string name="type">Type:</string>
</resources>
