<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/material_blue_grey_800"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/logo_citi"
        android:src="@drawable/citi_v2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered"
        android:id="@+id/textView"
        android:textColor="@android:color/white"
        android:layout_below="@+id/logo_citi"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consumer"
        android:textColor="@android:color/white"
        android:id="@+id/textView2"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/logo_citi"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_name"
        android:ems="10"
        android:background="@color/material_deep_teal_500"
        android:id="@+id/username"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:background="@color/material_deep_teal_500"
        android:id="@+id/password"
        android:hint="@string/hint_password"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/username"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/login_btn"
        android:layout_marginTop="106dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/client_id_edt"
        android:background="@color/material_deep_teal_200"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_marginTop="39dp"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:text="@string/hint_client_id"/>
</RelativeLayout>