<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_customer_id"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/txf_customer_id"/>
        <EditText
            android:id="@+id/txf_customer_id"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttons_margin"
            android:gravity="center_vertical"
            android:layout_toRightOf="@+id/tv_customer_id"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_source_acc_id"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:text="@string/txf_source_acc_id"/>
        <EditText
            android:id="@+id/txf_source_acc_id"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttons_margin"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_source_acc_id"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/txf_amount"/>
        <EditText
            android:id="@+id/txf_amount"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttons_margin"
            android:layout_toRightOf="@+id/tv_amount"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_transaction_date"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/txf_transaction_date"/>
        <EditText
            android:id="@+id/txf_transaction_date"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttons_margin"
            android:layout_toRightOf="@+id/tv_transaction_date"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_payment_type"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/txf_payment_type"/>
        <EditText
            android:id="@+id/txf_payment_type"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttons_margin"
            android:layout_toRightOf="@+id/tv_payment_type"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_currency"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/txf_currency"/>
        <EditText
            android:id="@+id/txf_currency"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttons_margin"
            android:layout_toRightOf="@+id/tv_currency"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_dest_acct_id"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/txf_dest_acc_id"/>
        <EditText
            android:id="@+id/txf_dest_acc_id"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttons_margin"
            android:layout_toRightOf="@+id/tv_dest_acct_id"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_memo"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/txf_memo"/>
        <EditText
            android:id="@+id/txf_memo"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttons_margin"
            android:layout_toRightOf="@+id/tv_memo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_payee_desc"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/txf_payee_description"/>
        <EditText
            android:id="@+id/txf_payee_description"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttons_margin"
            android:layout_toRightOf="@+id/tv_payee_desc"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_payee_id"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/txf_payee_id"/>
        <EditText
            android:id="@+id/txf_payee_id"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttons_margin"
            android:layout_toRightOf="@+id/tv_payee_id"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_type"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/txf_payee_type"/>
        <EditText
            android:id="@+id/txf_payee_type"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttons_margin"
            android:layout_toRightOf="@+id/tv_type"/>
    </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txf_submit"
            android:id="@+id/submit_btn"
            android:layout_marginTop="106dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</ScrollView>