<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent" android:padding="@dimen/buttons_margin"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txf_payee_id"/>
        <TextView
            android:id="@+id/payee_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttons_margin"            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="12sp"
            android:singleLine="false"
            android:ellipsize="end"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/payee_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttons_margin"            android:layout_alignParentLeft="true"
            android:textSize="12sp"
            android:singleLine="false"
            android:ellipsize="end"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_name"/>
        <TextView
            android:id="@+id/bank_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttons_margin"            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="12sp"
            android:singleLine="false"
            android:ellipsize="end"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"/>
        <TextView
            android:id="@+id/payment_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttons_margin"            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="12sp"
            android:singleLine="false"
            android:ellipsize="end"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txf_customer_id"/>
        <TextView
            android:id="@+id/last_payment_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttons_margin"            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="12sp"
            android:singleLine="false"
            android:ellipsize="end"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"/>
        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttons_margin"            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="12sp"
            android:singleLine="false"
            android:ellipsize="end"/>
    </RelativeLayout>
</LinearLayout>