<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent" android:padding="@dimen/buttons_margin"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/balance_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_id"
            android:layout_marginBottom="@dimen/buttons_margin" />
        <TextView
            android:id="@+id/balance_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttons_margin"            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="12sp"
            android:singleLine="false"
            android:ellipsize="end"/>/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/balance_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_type"
            android:layout_marginBottom="@dimen/buttons_margin" />
        <TextView
            android:id="@+id/balance_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/buttons_margin" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/balance_value_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_value"
            android:layout_marginBottom="@dimen/buttons_margin" />
        <TextView
            android:id="@+id/balance_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/buttons_margin" />
    </RelativeLayout>

</LinearLayout>